<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vinrosa.badtransitapp.FormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ReportTitleLabel"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/form_image_view"
                android:layout_width="330dp"
                android:layout_height="194dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:adjustViewBounds="false"
                android:background="@android:drawable/screen_background_dark"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_weight="0.04" />

            <TextView
                android:text="@string/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/form_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/form_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/form_send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
