<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vinrosa.badtransitapp.fragments.ReportDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="474dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/item_img_FDET"
                        android:layout_width="match_parent"
                        android:layout_height="191dp"
                        android:layout_weight="0.55"
                        android:src="@mipmap/ic_launcher_round" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/item_desc_FDET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="96dp"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/item_email_FDET"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/email" />
                        </LinearLayout>


                       <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content">

                           <TextView
                               android:id="@+id/DateLabel"
                               android:layout_width="98dp"
                               android:layout_height="wrap_content"
                               android:text="@string/Date"
                               android:textStyle="bold" />
                           <TextView
                               android:id="@+id/date_FDET"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/Date" />
                       </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/item_title_FDET"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="491dp"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/item_tisdtle_FDET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:text="@string/Location"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/mapView"
                        android:layout_width="match_parent"
                        android:layout_height="422dp" />

                    <!--<TextView-->
                    <!--android:id="@+id/date_FDsdET"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/Date" />                    -->

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>


</FrameLayout>
